--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
       </div>
       <h4>some heading</h4>
       <p>summary</p>
-      <button ion-button round outline (click) = "logData();">log data</button>
+      <button ion-button round  (click) = "logData();">log data</button>
     </ion-slide>
     <ion-slide>
       <div class="img-cont">
@@ -14,7 +14,7 @@
       </div>
       <h4>some heading</h4>
       <p>summary</p>
-      <button round outline ion-button (click) = "viewData();">view stats</button>
+      <button round  ion-button (click) = "viewData();">view stats</button>
     </ion-slide>
   </ion-slides>
   <div id="bg"></div>
