--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <link href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" rel="stylesheet">
 
 </head>
 <body>
@@ -37,6 +38,7 @@
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.css' rel='stylesheet' />
 
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
@@ -44,6 +46,10 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+  
+
+
+  
 
 </body>
 </html>
