--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -4,15 +4,37 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>map</ion-title>
   </ion-navbar>
 
+</ion-header> -->
+<ion-header>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
+
+<ion-navbar color="primary">
+    <ion-title>
+      Map
+    </ion-title>
+    <!-- <ion-buttons end>
+      <button ion-button icon-only (click)="addMarker()">
+        <ion-icon name="md-locate"></ion-icon>
+      </button>
+      <button ion-button icon-only (click)="loadMarkers()">
+        <ion-icon name="md-refresh"></ion-icon>
+      </button>
+    </ion-buttons>  -->
+  </ion-navbar>
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
 
+  
+  <p>Lat: {{lat}}</p>
+  <p>Lng: {{lng}}</p>
+  <div id="map" style="width:100%; height:100%;"></div>
+ 
 </ion-content>
