--- a/src/index.html
+++ b/src/index.html
@@ -46,19 +46,20 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyA_pzJ7HSm7PVlySiIApoaO7miznEX_woo",
-    authDomain: "tlc-database.firebaseapp.com",
-    databaseURL: "https://tlc-database.firebaseio.com",
-    projectId: "tlc-database",
-    storageBucket: "tlc-database.appspot.com",
-    messagingSenderId: "309257296351"
-  };
-  firebase.initializeApp(config);
-</script>
+
+  <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCQBN-6iYirijWxvoXrMgjWnmEtinNJOPI",
+      authDomain: "tlc-database-372f1.firebaseapp.com",
+      databaseURL: "https://tlc-database-372f1.firebaseio.com",
+      projectId: "tlc-database-372f1",
+      storageBucket: "tlc-database-372f1.appspot.com",
+      messagingSenderId: "110336498343"
+    };
+    firebase.initializeApp(config);
+  </script>
 
 
   
