--- a/src/pages/form/form.html
+++ b/src/pages/form/form.html
@@ -16,11 +16,11 @@
       <ion-list radio-group [(ngModel)]="gender">
         <ion-item>
           <ion-label style="font-weight:lighter">Male</ion-label>
-          <ion-radio value="male" checked></ion-radio>
+          <ion-radio value="Male" checked></ion-radio>
         </ion-item>
         <ion-item>
           <ion-label  style="font-weight:lighter">Female</ion-label>
-          <ion-radio value="female"></ion-radio>
+          <ion-radio value="Female"></ion-radio>
         </ion-item>
       </ion-list>
       <ion-list>
@@ -55,12 +55,12 @@
         <ion-item>
           <ion-label style="color:black;font-weight: lighter">Occupation</ion-label>
           <ion-select [(ngModel)]="occupation">
-            <ion-option value="vendor">vendor</ion-option>
-            <ion-option value="begger">begger</ion-option>
-            <ion-option value="promoters">promoter</ion-option>
-            <ion-option value="job seeker">job seeker</ion-option>
-            <ion-option value="windshield cleaner">windshield cleaner</ion-option>
-            <ion-option value="other">other</ion-option>
+            <ion-option value="Vendor">vendor</ion-option>
+            <ion-option value="Begger">begger</ion-option>
+            <ion-option value="Promoters">promoter</ion-option>
+            <ion-option value="Job Seeker">job seeker</ion-option>
+            <ion-option value="Windshield Cleaner">windshield cleaner</ion-option>
+            <ion-option value="Other">other</ion-option>
           </ion-select>
         </ion-item>
       </ion-list>
