--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -12,9 +12,7 @@
 
 </ion-header> -->
 <ion-header>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
-
-<ion-navbar color="primary">
+<ion-navbar text-center>
     <ion-title>
       Map
     </ion-title>
@@ -30,11 +28,7 @@
 </ion-header>
 
 
-<ion-content >
-
-  
-  <p>Lat: {{lat}}</p>
-  <p>Lng: {{lng}}</p>
+<ion-content > 
   <div id="map" style="width:100%; height:100%;"></div>
  
 </ion-content>
